<resources>
    <string name="app_name">Freeling</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="logros">Logros</string>
    <string name="perfil">Perfil</string>
    <string name="email">Email</string>
    <string name="passw">Contraseña</string>
    <string name="inicioSesion">Iniciar Sesión</string>
    <string name="registro">Registrarse</string>
    <string name="cuentaNoRegistrada">¿No tienes cuenta? ¡Regístrate!</string>
    <string name="logoApp">Logo de la App</string>
    <string name="fotoPerfil">Foto de perfil</string>
    <string name="nombreUsuario">Nombre</string>
    <string name="edad">Edad</string>
    <string name="intereses">Describe tus intereses: 🎵 música, 🎬 cine, 🎮 videojuegos...</string>
    <string name="pronombres">Pron</string>
    <string name="el">Él</string>
    <string name="ella">Ella</string>
    <string name="elle">Elle</string>
    <string name="genero">Género</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="hombreTrans">Hombre Trans</string>
    <string name="mujerTrans">Mujer Trans</string>
    <string name="androgino">Andrógino</string>
    <string name="neutro">Género Neutro</string>
    <string name="queer">Queer</string>
    <string name="noBinario">No Binario</string>
    <string name="agenero">Agénero</string>
    <string name="bigenero">Bigénero</string>
    <string name="fluido">Género Fluido</string>
    <string name="poligenero">Poligénero</string>
    <string name="intergenero">Intergénero</string>
    <string name="orientacion">Orientación sexual</string>
    <string name="hetero">Heterosexual</string>
    <string name="homo">Homosexual</string>
    <string name="bisexual">Bisexual</string>
    <string name="pansexual">Pansexual</string>
    <string name="asexual">Asexual</string>
    <string name="demisexual">Demisexual</string>
    <string name="lightsexual">Lightsexual</string>
    <string name="autosexual">Autosexual</string>
    <string name="antrosexual">Antrosexual</string>
    <string name="polisexual">Polisexual</string>
    <string name="guion">-</string>
    <string name="rangoEdad">¿Qué rango de edad buscas?</string>
    <string name="iconoEmail">📧</string>
    <string name="iconoPassw">🔑</string>
    <string name="iconoNombre">🙍‍</string>
    <string name="iconoEdad">📅</string>
    <string name="equipoApp">Logo del equipo de la App</string>
    <string name="camposVacios">No dejes ningún campo vacío</string>
    <string name="emailValido">Introduce un email válido</string>
    <string name="generoVacio">Por favor, elige un género</string>
    <string name="orientacionVacio">Por favor, elige una orientación sexual</string>
    <string name="usuarioVacio">Introduce un email</string>
    <string name="passwVacia">Introduce una contraseña</string>
    <string name="loginInc">Login incorrecto</string>
    <string name="pronombreVacio">Por favor, elige un pronombre</string>
    <string name="menorEdad">Debes tener al menos 18 años para registrarte</string>
    <string name="intervaloValido">Debes introducir un intervalo válido de edad a buscar</string>
    <string name="edadBuscadaValida">Debes buscar personas que tengan al menos 18 años</string>
    <string name="contraseniaLongitud">La contraseña debe tener 8 caracteres</string>
    <string name="contraseniaInCarac">La contraseña debe contener al menos un número</string>
    <string name="emailExistente">Ya existe un usuario con ese email</string>
    <string name="demasiadaEdad">Introduce una edad no mayor de 100 años</string>
    <string name="aceptar">Botón aceptar</string>
    <string name="rechazar">Boton rechazar</string>
    <string name="modificarPerfil">Modificar Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="parentesisInicial">(</string>
    <string name="parentesisFinal">)</string>
    <string name="anios">años</string>
    <string name="conectar">Conectar</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="miEmail">Mi email</string>
    <string name="escribe_mensaje">Escribe Mensaje</string>
    <string name="enviar">Enviar</string>
    <string name="volver">Volver</string>
    <string name="mi_email">Mi email</string>
    <string name="parentesisIzq">(</string>
    <string name="parentesisDcho">)</string>
    <string name="rangoEdadOtro">Rango de edad que busca:</string>
    <string name="interesesOtro">Intereses:</string>
    <string name="cero">0</string>
    <string name="darMedallaBuena">Dar Medalla buena al usuario encontrado</string>
    <string name="darMedallaMala">Dar Medalla mala al usuario encontrado</string>
    <string name="iniciaTuPrimerChat">Inicia tu primer chat</string>
    <string name="conseguido">Conseguido</string>
    <string name="bloqueado">Bloqueado</string>
    <string name="iniciaDiezChatsDiferentes">Inicia 10 chats diferentes</string>
    <string name="encuentraPrimerContacto">Encuentra tu primer contacto</string>
    <string name="encuentraDiezcontactos">Encuentra 10 contactos</string>
    <string name="entregaTuPrimeraMedalla">Entrega tu primera medalla</string>
    <string name="recibeTuPrimeraMedalla">Recibe tu primera medalla</string>
    <string name="cargandoConexion">Cargando Conexión</string>
    <string name="logo_empresa">Nombre de la empresa creadora de la App</string>
    <string name="foto_migue">Foto de Migue</string>
    <string name="foto_mamen">Foto de Mamen</string>
    <string name="texto_informativo">Somos dos estudiantes de 2º de Desarrollo de Aplicaciones Multiplataforma (DAM) en CENEC, y hemos creado esta App como proyecto final de nuestro ciclo. El objetivo de la App es poder conocer a gente con la que te cruzas por la calle, y que por vergüenza, falta de tiempo o el motivo que sea, no te atreves a hablarle directamente en persona. A través de nuestra aplicación podrás conocer más de esas personas, entablar una conversación a través de un chat y, quién sabe, quizás sea el comienzo de una nueva amistad.</string>
    <string name="imagenesLogros">Imágenes de los diferentes logros</string>
</resources>