<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/naranja"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoApp"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:contentDescription="@string/logoApp"
        app:layout_constraintBottom_toTopOf="@+id/campoUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/LogoConIDiferenteConSombra"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/LogoConIDiferenteConSombra" />

    <EditText
        android:id="@+id/campoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:fontFamily="@font/avertaregular"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/botonInicioSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoApp"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/campoPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="@font/avertaregular"
        android:hint="@string/passw"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campoUsuario"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/botonInicioSesion"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/inicioSesion"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        style="@style/ButtonBlue"
        app:layout_constraintBottom_toTopOf="@+id/botonRegistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campoUsuario" />

    <TextView
        android:id="@+id/lblRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:fontFamily="@font/avertaextrabold"
        android:text="@string/cuentaNoRegistrada"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/botonRegistro"
        app:layout_constraintEnd_toEndOf="@+id/botonRegistro"
        app:layout_constraintStart_toStartOf="@+id/botonRegistro" />

    <Button
        android:id="@+id/botonRegistro"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avertaextrabold"
        android:text="@string/registro"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="19sp"
        style="@style/ButtonGradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonInicioSesion" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/designedbymeow" />

</androidx.constraintlayout.widget.ConstraintLayout>