<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:background="@color/fucsiaClaro"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fucsiaClaro"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        tools:context=".PerfilUsuarioEncontradoActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/containerImagenPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="@color/fucsiaClaro"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toTopOf="@+id/emailOtro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imagenPerfilOtro"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:contentDescription="@string/fotoPerfil"

                app:srcCompat="@drawable/avatarpordefecto"
                tools:ignore="ImageContrastCheck" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/containerMedalla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:cardBackgroundColor="@color/fucsiaClaro"
            app:cardCornerRadius="30dp"
            app:layout_constraintStart_toEndOf="@+id/containerImagenPerfil"
            app:layout_constraintTop_toTopOf="@+id/containerImagenPerfil">

            <ImageView
                android:id="@+id/imagenMedalla"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/fotoPerfil"

                app:srcCompat="@drawable/medallabuena"
                tools:ignore="ImageContrastCheck" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/emailOtro"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:fontFamily="@font/avertaregular"
            android:text="@string/miEmail"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/nombreOtro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/lblEmailOtro"
            app:layout_constraintTop_toBottomOf="@+id/containerImagenPerfil"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/lblEmailOtro"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/iconoEmail"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/emailOtro"
            app:layout_constraintEnd_toStartOf="@+id/emailOtro"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/emailOtro"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/nombreOtro"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:fontFamily="@font/avertaregular"
            android:importantForAutofill="no"
            android:text="@string/nombreUsuario"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/generoOtro"
            app:layout_constraintEnd_toStartOf="@+id/pronombreOtro"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/lblNombreOtro"
            app:layout_constraintTop_toBottomOf="@+id/emailOtro"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/lblNombreOtro"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/iconoNombre"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/nombreOtro"
            app:layout_constraintEnd_toStartOf="@+id/nombreOtro"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/nombreOtro"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/parentesisIzq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parentesisIzq"
            android:fontFamily="@font/avertaregular"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/pronombreOtro"
            app:layout_constraintEnd_toStartOf="@+id/pronombreOtro"
            app:layout_constraintTop_toTopOf="@+id/pronombreOtro"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/pronombreOtro"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/pronombres"
            android:fontFamily="@font/avertaregular"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/nombreOtro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/nombreOtro"
            app:layout_constraintTop_toTopOf="@+id/nombreOtro"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/parentesisDcho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parentesisDcho"
            android:fontFamily="@font/avertaregular"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/pronombreOtro"
            app:layout_constraintStart_toEndOf="@+id/pronombreOtro"
            app:layout_constraintTop_toTopOf="@+id/pronombreOtro"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/generoOtro"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/genero"
            android:fontFamily="@font/avertaregular"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/lblGuion3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/lblGuion3"
            app:layout_constraintBottom_toBottomOf="@id/lblGuion3"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
            tools:layout_editor_absoluteY="342dp" />

        <TextView
            android:id="@+id/lblGuion3"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="@string/guion"
            android:fontFamily="@font/avertaregular"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/edadOtro"
            app:layout_constraintEnd_toStartOf="@+id/orientacionSexOtro"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/generoOtro"
            app:layout_constraintTop_toBottomOf="@+id/nombreOtro"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/orientacionSexOtro"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/orientacion"
            android:fontFamily="@font/avertaregular"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/lblGuion3"
            app:layout_constraintTop_toTopOf="@id/lblGuion3"
            app:layout_constraintBottom_toBottomOf="@id/lblGuion3"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
            tools:layout_editor_absoluteY="338dp" />

        <TextView
            android:id="@+id/lblEdadOtro"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/iconoEdad"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/edadOtro"
            app:layout_constraintEnd_toStartOf="@+id/edadOtro"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edadOtro"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/edadOtro"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:fontFamily="@font/avertaregular"
            android:importantForAutofill="no"
            android:text="@string/cero"
            android:textColor="@color/black"
            android:textColorHint="@color/negroTransparente"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/lblQueBuscasOtro"
            app:layout_constraintStart_toEndOf="@+id/lblEdadOtro"
            app:layout_constraintTop_toBottomOf="@+id/generoOtro"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/lblanios"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:fontFamily="@font/avertaregular"
            android:importantForAutofill="no"
            android:text="@string/anios"
            android:textColor="@color/black"
            android:textColorHint="@color/negroTransparente"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/edadOtro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edadOtro"
            app:layout_constraintTop_toTopOf="@+id/edadOtro"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/lblQueBuscasOtro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/avertaregular"
            android:text="@string/rangoEdadOtro"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/lblGuion2"
            app:layout_constraintEnd_toEndOf="@+id/edadMaxOtro"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/edadMinOtro"
            app:layout_constraintTop_toBottomOf="@+id/edadOtro"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/edadMinOtro"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:fontFamily="@font/avertaregular"
            android:importantForAutofill="no"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/negroTransparente"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/lblGuion2"
            app:layout_constraintEnd_toStartOf="@+id/lblGuion2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/lblGuion2"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/lblGuion2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/guion"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/lblInteresesOtro"
            app:layout_constraintEnd_toStartOf="@+id/edadMaxOtro"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/edadMinOtro"
            app:layout_constraintTop_toBottomOf="@+id/lblQueBuscasOtro"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/edadMaxOtro"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:fontFamily="@font/avertaregular"
            android:importantForAutofill="no"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/negroTransparente"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/lblGuion2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/lblGuion2"
            app:layout_constraintTop_toTopOf="@+id/lblGuion2"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/lblInteresesOtro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/avertaregular"
            android:text="@string/interesesOtro"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/interesesOtro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblGuion2"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/interesesOtro"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:fontFamily="@font/avertaregular"
            android:gravity="start|top"
            android:importantForAutofill="no"
            android:maxLength="160"
            android:scrollbars="vertical"
            android:text="@string/intereses"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textColorHint="@color/negroTransparente"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblGuion2"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>