<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewFotoUsuarioChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/fotoUsuarioEncontradoChat"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/fotoPerfil"
            app:srcCompat="@drawable/avatarpordefecto" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/nombreUsuarioEncontradoChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/avertaextrabold"
        android:text="@string/nombreUsuario"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardViewFotoUsuarioChat"
        app:layout_constraintTop_toTopOf="@+id/cardViewFotoUsuarioChat" />

    <TextView
        android:id="@+id/campoEmailChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/averta"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/nombreUsuarioEncontradoChat"
        app:layout_constraintStart_toEndOf="@+id/cardViewFotoUsuarioChat"
        app:layout_constraintTop_toBottomOf="@+id/nombreUsuarioEncontradoChat" />
</androidx.constraintlayout.widget.ConstraintLayout>